# embedfire_stm32f1

./: .gitignore  .mxproject  CMakeLists.txt  EmbedFireHAL.ioc  README.md  openocd.cfg
.vim/: coc-settings.json
Core/Inc/: main.h  stm32f1xx_hal_conf.h
Core/Src/: adc.c  can.c  fsmc.c  gpio.c  main.c  sdio.c  spi.c  stm32f1xx_it.c  wwdg.c
FATFS/App/: fatfs.c  fatfs.h
SW4STM32/EmbedFireHAL/: .cproject  .project  EmbedFireHAL.xml
USB_DEVICE/App/: usbd_storage_if.c
